--- a/src/helpers/config.css
+++ b/src/helpers/config.css
@@ -5,3 +5,13 @@
 .slick-slide {
   position: relative !important;
 }
+
+.slick-prev,
+.slick-next {
+  font-size: 15px !important;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  content: "" !important;
+}
