--- a/src/helpers/config.css
+++ b/src/helpers/config.css
@@ -33,3 +33,8 @@
   border-bottom: 1px solid #5e5e56 !important;
   color: white !important;
 }
+
+.MuiPopover-paper {
+  overflow-x: initial !important;
+  overflow-y: initial !important;
+}
